新增首頁BN區塊

--- a/index_v2_20220730.html
+++ b/index_v2_20220730.html
@@ -19,7 +19,14 @@
             <a href="#">方案費用</a>
         </div>
 
-        <div class="content"></div>
+        <div class="content">
+            <div class="contentTxt"> 
+                <h1>ChatTalker 最全面的聊天機器人</h1>
+                <p class="contentstyle1">你愛我像誰？<br>扮演什麼角色我都會</p>
+                <p class="contentStyle2">Facebook、Instagram、LINE 聊天機器人解決方案</p>
+            </div>
+            <img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/home.svg" alt="banner機器人圖片">
+        </div> 
 
         <div class="platform">
             <h2>三大平台我來搞定</h2>
