新增費用方案頁面
新增費用方案頁面
修正首頁

--- a/index_v2_20220730.html
+++ b/index_v2_20220730.html
@@ -23,7 +23,7 @@
         <div class="container">
             <div class="navbar">
                 <div><img src="https://raw.githubusercontent.com/hexschool/webLayoutTraining1st/53d3c0b0e4d2885789ac1fcb666e427365a39207/chatTalker_images/logo.png" alt="chatTalker"></div>
-                <a href="#">方案費用</a>
+                <a href="program.html">方案費用</a>
             </div>
     
             <div class="content">
